# hcz_py_mada

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CONTINUATION_PLAN.md  DESIGN.md  MIGRATION_PLAN.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
archive_docs/docs_before_slimming_2026-06-09/docs/: API_STABILITY.md  CLI_INVENTORY.md  COVERAGE_MATRIX.md  IMPLEMENTED_MODULES.md  LOCAL_INSTALL_AND_USAGE.md  MADAGASCAR_COMPATIBILITY.md  MADAGASCAR_FULL_COVERAGE_AUDIT.md  MASTER_HANDOFF_BEFORE_BATCH_MIGRATION.md  NEXT_100_TASKS.md  NEXT_MIGRATION_BACKLOG.md  ORIGINAL_MADAGASCAR_COMPARISON.md  PROJECT_HANDOFF.md  PYTHONIC_USAGE.md  RELEASE_CHECKLIST.md  SESSION_HANDOFF_AFTER_P1_07.md  SIGNAL_COMPATIBILITY.md  TEST_STATUS.md  WSL_MADAGASCAR_TESTING.md  build_hybrid.md
archive_docs/docs_before_slimming_2026-06-09/docs/batch_plans/: STAGE_B_SYSTEM_MAIN_PLAN.md
benchmarks/: bench_xcorr.py  bench_xcorr_report.md
cpp/: bindings.cpp
cpp/kernels/: array_ops.cpp  array_ops.hpp  xcorr.cpp  xcorr.hpp
docs/: API_AND_COMPATIBILITY.md  API_SURFACE.md  CHANGELOG.md  CODE_COMMENT_GUIDE.md  COVERAGE_AND_ROADMAP.md  KNOWN_LIMITATIONS.md  MADAGASCAR_SOURCE_READING.md  PROJECT_STATUS.md  PYMADAGASCAR_LEARNING_GUIDE.ipynb  PYMADAGASCAR_MINDMAP.xmind  README.md  SOURCE_AUDIT_WORKSHEET.md  SOURCE_COMMAND_ADMISSION.md  SOURCE_COMMAND_BACKLOG.md  SOURCE_COMMAND_TEMPLATE.md  TESTING_AND_ENVIRONMENT.md  USER_GUIDE.md
examples/: axis_calculus_conditioning_demo.py  byte_demo.py  cat_demo.py  complex_tools_demo.py  cp_rm_min_max_demo.py  disfil_demo.py  fir_filter_design_demo.py  generic_sampling_demo.py  get_demo.py  header_table_tools_demo.py  header_window_cut_demo.py  kirchhoff_demo.py  linear_operator_tools_demo.py  local_quickstart.py  mask_cut_reverse_demo.py  math_demo.py  mul_div_tpow_interleave_demo.py  noise_demo.py  plot_demo.py  pythonic_usage_demo.py  read_write_rsf_demo.py  ricker_demo.py  robust_statistics_nan_qc_demo.py  seismic_gather_qc_demo.py  signal_correlation_conditioning_demo.py  signal_preprocessing_demo.py  signal_qc_foundation_demo.py  smooth_demo.py  spectral_averaging_attributes_demo.py  spectral_qc_demo.py  spike_demo.py  transp_demo.py  unary_distribution_qc_demo.py  window_demo.py
examples/my_workflows/: README.md  _common.py  acoustic_modeling_validation_workflow.py  basic_rsf_io_workflow.py  das_void_diffraction_workflow.py  fft_bandpass_workflow.py  lsqr_minimal_example.py  plot_grey_graph_workflow.py  seismic_basic_agc_mute_stack_workflow.py  seismic_fk_contract_workflow.py  seismic_geometry_contract_workflow.py  seismic_nmo_contract_workflow.py  seismic_semblance_contract_workflow.py  seismic_signal_contract_workflow.py  seismic_signal_metrics_workflow.py  seismic_slant_stack_contract_workflow.py  seismic_small_gather_processing_workflow.py  spike_math_window_workflow.py
pymadagascar/: __init__.py  api.py
pymadagascar/cli/: __init__.py  abs.py  acoustic2d.py  add.py  agc.py  ai2refl.py  attr.py  autocorr.py  avo.py  bandenergy.py  bandpass.py  bandstop.py  base.py  bin.py  boxsmooth.py  byte.py  cat.py  causint.py  cconjgrad.py  cconv.py  cdottest.py  clip.py  clip2.py  cmp2shot.py  cmplx.py  coherence.py  conjgrad.py  conv.py  convolve.py  corr.py  cos2ang.py  cosft.py  costaper.py  cp.py  csd.py  cut.py  dd.py  decimate.py  demean.py  deriv.py  (+129 more)
pymadagascar/core/: __init__.py  axis.py  hypercube.py  params.py
pymadagascar/generic/: __init__.py  array_algebra.py  array_math.py  attr.py  byte.py  cat.py  complex_tools.py  cut.py  dd.py  difference.py  edge.py  file_ops.py  header_mask.py  header_table.py  info.py  interleave.py  laplac.py  least_squares.py  linear_operator.py  lpad.py  mask.py  math.py  noise.py  operators.py  otsu.py  pad.py  polymask.py  preconditioners.py  put.py  regularization.py  remap.py  reverse.py  rotate.py  sampling.py  solvers.py  spike.py  spray.py  statistics.py  stats.py  tclip.py  (+3 more)
pymadagascar/hybrid/: __init__.py  array_ops.py  xcorr.py
pymadagascar/imaging/: __init__.py  kirchhoff.py
pymadagascar/io/: __init__.py  rsf.py  segy.py
pymadagascar/localization/: __init__.py  traveltime.py
pymadagascar/modeling/: __init__.py  acoustic2d.py  geometry.py  models.py  shot.py
pymadagascar/plot/: __init__.py  _common.py  graph.py  grey.py  wiggle.py
pymadagascar/seismic/: __init__.py  _utils.py  agc.py  ai2refl.py  angle.py  avo.py  fk.py  fold.py  gain.py  gather.py  halfint.py  map2coh.py  moveout.py  mute.py  nmo.py  radon.py  semblance.py  stack.py
pymadagascar/signal/: __init__.py  calculus.py  conditioning.py  convolution.py  fft.py  filter.py  fir.py  preprocessing.py  qc.py  smooth.py  spectral.py  transforms.py  trapez.py  wavelet.py
pymadagascar/testing/: __init__.py  compare.py  fixtures.py  runner.py  seismic_fixtures.py  seismic_geometry.py  seismic_metrics.py
tests/: conftest.py  test_acoustic2d.py  test_acoustic2d_shot_contract.py  test_acoustic2d_survey_contract.py  test_acoustic_modeling_validation_workflow.py  test_array_math.py  test_axis_calculus_conditioning_tools.py  test_byte.py  test_cat.py  test_cgls_contract.py  test_cgls_lsqr_design_contract.py  test_cgls_preconditioner_contract.py  test_cli_entrypoints.py  test_cli_params.py  test_cli_smoke.py  test_complex_tools.py  test_convolution.py  test_cp_rm_min_max.py  test_das_void_diffraction_workflow.py  test_dd.py  test_disfil.py  test_examples_inventory.py  test_fft.py  test_filter.py  test_fir_filter_design_tools.py  test_fk.py  test_generic_array_algebra_selection_batch.py  test_generic_interpolation_remap_batch.py  test_generic_operator_filter_batch.py  test_generic_sampling_tools.py  test_generic_spectral_transform_batch.py  test_get.py  test_header_table_tools.py  test_header_window_cut.py  test_hybrid_import.py  test_hybrid_xcorr.py  test_hypercube.py  test_info_attr_put.py  test_inversion_problem_contract.py  test_kirchhoff.py  (+62 more)
tools/: check_cli_inventory.py  check_docs_commands.py  check_examples_inventory.py  check_learning_notebook.py  check_mindmap.py  check_release.py  check_wsl_madagascar.py
(+1 files in other folders)
